# trader-charts-data-collector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  manifest.in  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: check_code.sh  fix-code.sh
src/: config.py  load_environment.py  logging_config.py
src/app/: __init__.py  __main__.py
src/clients/: selenium_client.py
src/dao/: file_manager_dao.py  mongo_manager_dao.py
src/mains/: main_analyze_sentiment_model_rss_feeds.py  main_analyze_topic_model_rss_feeds.py  main_collect_historical_data.py  main_collect_rss_feeds.py  main_finetune_sentiment_model.py
src/services/: download_service.py  rss_collector_service.py
